--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,5 @@ dependencies {
     implementation 'com.google.zxing:core:3.2.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'com.android.support:design:28.0.0'
-
+    api 'com.google.guava:guava:27.1-android'
 }
