--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:supportsRtl="true"
             android:usesCleartextTraffic="true"
             android:fitsSystemWindows="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/MyAppTheme">
 
         <service
                 android:name=".service.MyFirebaseMessagingService"
