--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".screens.activity.LoginActivity">
         </activity>
+        <activity android:name=".screens.activity.CreateNewActivity">
+        </activity>
 
         <service
             android:name=".service.MyFirebaseMessagingService"
