--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.sneakers.sneakerschecker">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.sneakers.sneakerschecker">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -20,41 +20,35 @@
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".screens.activity.ConfirmRegisterActivity">
-        </activity>
-        <activity android:name=".screens.activity.LoginActivity">
-        </activity>
-        <activity android:name=".screens.activity.CreateNewActivity">
-        </activity>
+        <activity android:name=".screens.activity.CustomScanActivity"></activity>
+        <activity android:name=".screens.activity.ConfirmRegisterActivity"></activity>
+        <activity android:name=".screens.activity.LoginActivity"></activity>
+        <activity android:name=".screens.activity.CreateNewActivity"></activity>
 
         <service
             android:name=".service.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <activity android:name=".screens.activity.TransferActivity">
-        </activity>
-        <activity android:name=".screens.activity.CollectionActivity">
-        </activity>
-        <activity android:name=".screens.activity.SneakerInfoActivity">
-        </activity>
+        <activity android:name=".screens.activity.TransferActivity"></activity>
+        <activity android:name=".screens.activity.CollectionActivity"></activity>
+        <activity android:name=".screens.activity.SneakerInfoActivity"></activity>
         <activity android:name=".screens.activity.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
-            tools:replace="android:screenOrientation"/>
+            tools:replace="android:screenOrientation" />
     </application>
 
 </manifest>
