--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
     implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
