--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".screens.activity.CustomScanActivity"/>
         <activity android:name=".screens.activity.ConfirmRegisterActivity"/>
-        <activity android:name=".screens.activity.LoginActivity"/>
+        <activity
+            android:name=".screens.activity.LoginActivity"
+            android:windowSoftInputMode="adjustResize|stateAlwaysVisible"/>
         <activity
             android:name=".screens.activity.CreateNewActivity"
             android:windowSoftInputMode="adjustResize|stateAlwaysVisible"/>
