--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,15 @@
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".screens.activity.FinishVerifyActivity"/>
-        <activity android:name=".screens.activity.VerifyPhoneActivity"
-            android:windowSoftInputMode="adjustResize|stateAlwaysVisible"/>
+        <activity android:name=".screens.activity.UpdateUserRegisterActivity"></activity>
+        <activity android:name=".screens.activity.FinishVerifyActivity" />
+        <activity
+            android:name=".screens.activity.VerifyPhoneActivity"
+            android:windowSoftInputMode="adjustResize|stateAlwaysVisible" />
         <activity android:name=".screens.activity.CustomScanActivity" />
         <activity android:name=".screens.activity.ConfirmRegisterActivity" />
-        <activity
-            android:name=".screens.activity.LoginActivity"
-            android:windowSoftInputMode="adjustResize|stateAlwaysVisible" />
-        <activity
-            android:name=".screens.activity.CreateNewActivity"
-            android:windowSoftInputMode="adjustResize|stateAlwaysVisible" />
+        <activity android:name=".screens.activity.LoginActivity" />
+        <activity android:name=".screens.activity.CreateNewActivity" />
 
         <service
             android:name=".service.MyFirebaseMessagingService"
