--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,8 @@ dependencies {
     //Firebase auth
     implementation 'com.google.firebase:firebase-auth:19.2.0'
 
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
