--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,13 @@ buildscript {
         mavenCentral()
         google()
         jcenter()
-        
+        maven {
+            url "https://cardinalcommerce.bintray.com/android"
+            credentials {
+                username 'braintree-team-sdk@cardinalcommerce'
+                password '220cc9476025679c4e5c843666c27d97cfb0f951'
+            }
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
@@ -21,7 +27,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
